--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,24 +1,24 @@
-format = '$username[:](bold white) $directory[(\[$git_branch$git_state\])](bold dimmed bright-yellow)$line_break$character'
+format = '$username[:](bold white) $directory[(\[$git_branch$git_state\])](bold dimmed yellow)$line_break$character'
 
 [username]
 format = '[$user]($style)'
-style_user = "bold cyan"
+style_user = "bold dimmed cyan"
 style_root = "bold red"
 show_always = true
 
 [directory]
 format = '[$path]($style) [$read_only]($read_only_style)'
-style = "bold blue"
+style = "bold white"
 read_only = "[readonly]"
 read_only_style = "bright-black"
 
 [git_branch]
 format = '[$branch]($style)'
-style = 'bold yellow'
+style = 'bold dimmed yellow'
 
 [git_state]
 format = '[ | $state( $progress_current/$progress_total)]($style)'
-style = 'bold yellow'
+style = 'bold dimmed yellow'
 
 [character]
 success_symbol = '[❯](bold white)'
