update terminal colors

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,5 @@
 import = [
-  # uncomment the flavour you want below:
-  "~/.config/alacritty/midnight.toml"
+  "~/.config/alacritty/custom.toml"
 ]
 
 [window]
