--- a/.config/alacritty/custom.toml
+++ b/.config/alacritty/custom.toml
@@ -1,6 +1,6 @@
 # inspired by moonfly theme
 [colors]
-draw_bold_text_with_bright_colors = true 
+draw_bold_text_with_bright_colors = false
 
 [colors.bright]
 black = "#949494"
