--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,25 +1,25 @@
-format = '$username[:](bold dimmed white) $directory[(\[$git_branch$git_state\])](bold dimmed bright-yellow)$line_break$character'
+format = '$username[:](bold white) $directory[(\[$git_branch$git_state\])](bold dimmed bright-yellow)$line_break$character'
 
 [username]
 format = '[$user]($style)'
-style_user = "bold dimmed bright-cyan"
+style_user = "bold cyan"
 style_root = "bold red"
 show_always = true
 
 [directory]
 format = '[$path]($style) [$read_only]($read_only_style)'
-style = "bold dimmed bright-blue"
+style = "bold blue"
 read_only = "[readonly]"
 read_only_style = "bright-black"
 
 [git_branch]
 format = '[$branch]($style)'
-style = 'bold dimmed yellow'
+style = 'bold yellow'
 
 [git_state]
 format = '[ | $state( $progress_current/$progress_total)]($style)'
-style = 'bold dimmed yellow'
+style = 'bold yellow'
 
 [character]
-success_symbol = '[❯](bold dimmed white)'
+success_symbol = '[❯](bold white)'
 error_symbol = '[❯](bold red)'
