--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,8 +1,8 @@
-format = '$username$sudo[:](bold white) $directory[(\[$git_branch$git_state\])](bold dimmed yellow)$line_break$character'
+format = '$username$sudo[:](bold bright-black) $directory[(\[$git_branch$git_state\])](bold yellow)$line_break$character'
 
 [username]
 format = '[$user]($style)'
-style_user = "bold dimmed cyan"
+style_user = "bold bright-cyan"
 style_root = "bold red"
 show_always = true
 aliases = { "christoph.aurich@energy2market.de" = "christoph.aurich" }
@@ -15,18 +15,18 @@ disabled = false
 
 [directory]
 format = '[$path]($style) [$read_only]($read_only_style)'
-style = "bold white"
+style = "bold bright-white"
 read_only = "[readonly]"
 read_only_style = "bright-black"
 
 [git_branch]
 format = '[$branch]($style)'
-style = 'bold dimmed yellow'
+style = 'bold yellow'
 
 [git_state]
 format = '[ | $state( $progress_current/$progress_total)]($style)'
-style = 'bold dimmed yellow'
+style = 'bold bright-black'
 
 [character]
-success_symbol = '[❯](bold white)'
+success_symbol = '[❯](bold bright-black)'
 error_symbol = '[❯](bold red)'
